Release CMTK-1.6.0:

(r2768) Removed: unused and redundant "probe_xform" and "average_grey"
    applications. Use "gregxform" and "reformatx"/"average_images" instead.
(r2765) Removed: largely unused and incomplete support for building a single
    "cmtk" binary wrapper for all command line tools.
(r2760) Removed: now-obsolete "convert" tool has been retired. Operations
    still missing in "convertx" will be added as the need arises.
(r2756) Added: "convertx" tool gained two more missing operations from
    "convert", namely replace padded pixels and pixels with Inf/NaN values.
(r2752) Improved: addressing all warnings reported by "doxygen", source code
    documentation has been completed.
(r2733) Removed: the "congeal", "groupwise_rmi", "congeal_warp", and
    "groupwise_rmi_warp" tools have been removed. These are replaced by the
    "groupwise_affine" and "groupwise_warp" tools introduced in the previous
    release.


Release CMTK-1.5.4 (2011-01-13):

(r2714) Changed: all command line tools now default to writing output in NIFTI
    format, not Analyze, if no output file name is given.
(r2708) Added: new "groupwise_warp" tool for nonrigid groupwise registration
    unites the "congeal_warp" and "groupwise_rmi-warp" tools, which will be
    removed in the next release of CMTK.
(r2705) Added: new "groupwise_affine" tool for affine groupwise registration
    unites the "congeal" and "groupwise_rmi" tools, which will be removed in
    the next release of CMTK.
(r2695) Fixed: subtle and rare numerical problem leading to NAN values in
    image-to-physical matrix read from Nifti files with quaternion-based
    orientation.
(r2684) Fixed: improved installation and packaging by fixing multiple problems
    related to CMTK use files and scripts.
(r2680) Improved: better naming, grouping, and documentation of "film",
    "volume_injection", and "volume_reconstruction" command line options. Also
    named equivalent options consistently between these tools.